tests/negative/types/tc_bitvectors.yvr
a: BV[10]
b: BV[3]
a = BV{1, 9}
b = BV{1, 1}
a = b
b = a